--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel index.html",
-    "build": "parcel index.html"
+    "dev": "parcel src/index.html",
+    "build": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "cropperjs": "^1.5.9"
+    "cropperjs": "^1.5.9",
+    "dropzone": "^5.7.6"
   }
 }
