--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/cstuder/bundestriangel#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "cropperjs": "^1.5.9",
-    "dropzone": "^5.7.6"
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
