--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "deploy-LIVE": "git push . main:LIVE && git push origin LIVE"
   },
   "repository": {
